This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.12.2 (UNRELEASED)
-------------------
Improvements:
 - apport_python_hook.py: Directly check /etc/default/apport instead of
   querying packaging.enabled(), to avoid importing lots of modules for
   non-packaged scripts. Thanks Stuart Colville! (LP: #528355)

1.12.1 (2010-02-22)
-------------------
Bug fixes:
 - launchpad.py: Do not keep escalating bugs, just escalate at the 10th
   duplicate.
 - Improve error message if a symptom script did not determine a package name.
   (LP: #503834)
 - general-hooks/generic.py: Fix crash on libGL check with empty StacktraceTop.
 - Review and clean up usage of chmod(). This fixes a small race condition in the
   Python exception hook where a local attacker could read the information from
   another user's crash report. (LP: #516029)
 - hookutils, package_versions(): Ignore "None" packages, for more robust
   package hooks. (LP: #518295)

1.12 (2010-01-20)
-----------------
Improvements:
 - launchpad.py: Add options 'escalation_subscription' and 'escalation_tag' for
   handling bugs with more than 10 duplicates.
 - crashdb.conf: For Ubuntu, escalate bugs with >= 10 duplicates to
   "ubuntu-bugcontrol" and tag them with "bugpattern-needed". (LP: #487900)
 - general-hooks/generic.py: Filter out crashes on missing GLX (LP: #327673)
 - Add bash completion script. Thanks to Philip Muškovac. (LP: #218933)

Bug fixes:
 - launchpad.py: Drop APPORT_FILES whitelist for download() and instead just
   filter out file extensions that we know about (*.txt and *.gz).
   (LP: #444975)
 - launchpad.py: Do not put the Tags: field into the bug description, since
   they are already proper tags. In download(), convert the real tags back to
   the Tags: field. (LP: #505671)
 - test/crash: Update expected core dump flags for changed rlimit behaviour in
   Linux 2.6.32.